Fixed layout bug in topbar.

--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -21,3 +21,8 @@
     color: #212529;
     background-color: #ffffff;
 }
+
+#icon-container{
+    height: 40px;
+    width: 40px;
+}
